<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".Fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addCategory"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="20sp"

            android:text="@string/addcategory" />

        <androidx.appcompat.widget.AppCompatButton android:id="@+id/Product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/colorPrimary"
            android:layout_margin="8dp"
            android:textSize="20sp"
            android:text="@string/addproduct" />

        <androidx.appcompat.widget.AppCompatButton android:id="@+id/addSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/colorPrimary"
            android:layout_margin="8dp"
            android:textSize="20sp"
            android:text="@string/addslider" />

        <androidx.appcompat.widget.AppCompatButton android:id="@+id/allorderdetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/colorPrimary"
            android:layout_margin="8dp"
            android:textSize="20sp"
            android:text="@string/allotderdetail" />

        <androidx.appcompat.widget.AppCompatButton android:id="@+id/alluserdetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:textColor="@color/colorPrimary"
            android:layout_margin="8dp"
            android:textSize="20sp"
            android:text="@string/userDetails" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>